--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
      <section class="banner">        
         <img class="image2" src="./assets/images/banner.jpeg" alt="banner glasses"/>
         <div>
+            <h2>Courtney's Resume</h2>
     </section>
 
   <!-- About section -->
