--- a/index.html
+++ b/index.html
@@ -42,8 +42,7 @@
     <div class="flex-row">
       <h2 class="section-title">About Me</h2> 
     </div>
-    <div class="step-info">
-        <div class="vl-border1">
+        <div class="border1">
     </div>
         <div class="step-text">
             <p>
@@ -56,5 +55,11 @@
         </div>
  </section>   
 
+ <!-- Work section -->
+ <section id="work" class="about">
+    <div class="flex-row">
+        <h2 class="selection-title">My Work</h2>
+    </div>
+ </section>
      
     
