--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
     </div>
         <div class="border1">
     </div>
-        <div class="step-text">
+        <div class="info">
             <p>
                 My name is Courtney, I am 24 years old and live in New Jersey!  
                 I have been working a receptionist job at the European Wax Center 
@@ -60,6 +60,20 @@
     <div class="flex-row">
         <h2 class="selection-title">My Work</h2>
     </div>
+    <div class="info">
+        <div class="border2">
+    </div>
+    <!-- My work images -->
+    <div class="picture links">
+        <div class="pictures">
+            <figure class="picture-1">
+                <a href="https://courtneysacco.github.io/my-horiseon/">
+                    <img src=".assets/images/horiseon-2.png" alt="Horiseon webpage">
+                    <figcaption>My Horiseon</br>HTML CSS</figcaption>
+                </a>
+            </figure>
+        </div>
+    </div>  
  </section>
      
     
