--- a/index.html
+++ b/index.html
@@ -76,4 +76,15 @@
     </div>  
  </section>
      
-    
+    <!-- Contact me section -->
+    <section id="contact-me" class="about">
+        <div class="flex-row">
+            <h2 class="section-title">Contact Me</h2>
+        </div>
+    <div class="info">
+        <div class="border3">
+    </div>   
+    <div class="contact-info">
+        <ul>
+
+    </section>
