added contact links

--- a/index.html
+++ b/index.html
@@ -86,5 +86,24 @@
     </div>   
     <div class="contact-info">
         <ul>
-
+            <!-- Contact links -->
+            <li>
+                <a href="#number">555-555-5555</a>
+            <li>
+            <li>
+                <a href="#website">website.com</a>
+            </li>    
+            <li>
+                <a href="https://github.com/courtneysacco">Github</a>
+            </li>
+            <li>
+                <a href="#twitter">Twitter</a>
+            </li>
+            <li>
+                <a href="spotify">Spotify</a>
+            </li>
+        </ul>
+        </div>
     </section>
+</body>
+</html>
