styled the about me paragraph

--- a/index.html
+++ b/index.html
@@ -32,8 +32,7 @@
 
      <!-- Top of page/banner -->
      <section class="banner">        
-        <img class="image2" src="./assets/images/banner.jpeg" alt="banner glasses"/>
-        <div>
+       
             <h2>Courtney's Resume</h2>
     </section>
 
@@ -58,7 +57,7 @@
  <!-- Work section -->
  <section id="work" class="about">
     <div class="flex-row">
-        <h2 class="selection-title">My Work</h2>
+        <h2 class="section-title">My Work</h2>
     </div>
     <div class="info">
         <div class="border2">
