styled the contact section

--- a/index.html
+++ b/index.html
@@ -32,7 +32,8 @@
 
      <!-- Top of page/banner -->
      <section class="banner">        
-       
+        <img class="image2" src="./assets/images/banner.jpeg" alt="banner glasses"/>
+        <div>
             <h2>Courtney's Resume</h2>
     </section>
 
@@ -63,11 +64,11 @@
         <div class="border2">
     </div>
     <!-- My work images -->
-    <div class="picture links">
+    <div class="picture-links">
         <div class="pictures">
             <figure class="picture-1">
                 <a href="https://courtneysacco.github.io/my-horiseon/">
-                    <img src=".assets/images/horiseon-2.png" alt="Horiseon webpage">
+                    <img src="./assets/images/horiseon-2.png" alt="Horiseon webpage">
                     <figcaption>My Horiseon</br>HTML CSS</figcaption>
                 </a>
             </figure>
@@ -90,7 +91,7 @@
                 <a href="#number">555-555-5555</a>
             <li>
             <li>
-                <a href="#website">website.com</a>
+                <a href="#website">Website.com</a>
             </li>    
             <li>
                 <a href="https://github.com/courtneysacco">Github</a>
