starting from scratch because couldn't get pictures to cooperate

--- a/index.html
+++ b/index.html
@@ -1,109 +1,9 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8"/>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Courtney Sacco Portfolio</title>
-    <link rel="stylesheet" href="./assets/css/style.css" />
-</head>
-<body>
-     <!--Header-->
-     <header>
-        <h1>Courtney Sacco</h1>
-        <nav>
-            <!--Header Tabs-->
-            <ul>
-                <!--List Header Tabs-->
-                <li>
-                    <a href="#about-me">About Me</a>   
-                </li>
-                <li>
-                    <a href="#work">Work</a>   
-                </li>
-                <li>
-                    <a href="#contact-me">Contact Me</a>   
-                </li>
-                <li>
-                    <a href="./resume.html">Resume</a>   
-                </li>                    
-            </ul>
-        </nav>
-    </header>
-
-     <!-- Top of page/banner -->
-     <section class="banner">        
-        <img class="image2" src="./assets/images/banner.jpeg" alt="banner glasses"/>
-        <div>
-            <h2>Courtney's Resume</h2>
-    </section>
-
-  <!-- About section -->
-  <section id="about-me" class="about">
-    <div class="flex-row">
-      <h2 class="section-title">About Me</h2> 
-    </div>
-        <div class="border1">
-    </div>
-        <div class="info">
-            <p>
-                My name is Courtney, I am 24 years old and live in New Jersey!  
-                I have been working a receptionist job at the European Wax Center 
-                for 4 years now and I am ready for change, which is why I decided
-                to take a coding course.  In my spare time, I love to read or go out 
-                with some friends.
-            </p>
-        </div>
- </section>   
-
- <!-- Work section -->
- <section id="work" class="about">
-    <div class="flex-row">
-        <h2 class="section-title">My Work</h2>
-    </div>
-    <div class="info">
-        <div class="border2">
-    </div>
-    <!-- My work images -->
-    <div class="picture-links">
-        <div class="pictures">
-            <figure class="picture-1">
-                <a href="https://courtneysacco.github.io/my-horiseon/">
-                    <img src="./assets/images/horiseon-2.png" alt="Horiseon webpage">
-                    <figcaption>My Horiseon</br>HTML CSS</figcaption>
-                </a>
-            </figure>
-        </div>
-    </div>  
- </section>
-     
-    <!-- Contact me section -->
-    <section id="contact-me" class="about">
-        <div class="flex-row">
-            <h2 class="section-title">Contact Me</h2>
-        </div>
-    <div class="info">
-        <div class="border3">
-    </div>   
-    <div class="contact-info">
-        <ul>
-            <!-- Contact links -->
-            <li>
-                <a href="#number">555-555-5555</a>
-            <li>
-            <li>
-                <a href="#website">Website.com</a>
-            </li>    
-            <li>
-                <a href="https://github.com/courtneysacco">Github</a>
-            </li>
-            <li>
-                <a href="#twitter">Twitter</a>
-            </li>
-            <li>
-                <a href="spotify">Spotify</a>
-            </li>
-        </ul>
-        </div>
-    </section>
-</body>
-</html>
+<html lang="en-us">
+    <!-- Head -->
+    <head>
+        <meta charset="UTF-8" />
+        <link rel="stylesheet" href=".assets/css/style.css">
+        <title>Courtney's Portfolio</title>
+        <meta name="viewport" content="width=device=width, initial-scale.1.0">
+    </head>
