added head/nav bar

--- a/index.html
+++ b/index.html
@@ -7,3 +7,24 @@
         <title>Courtney's Portfolio</title>
         <meta name="viewport" content="width=device=width, initial-scale.1.0">
     </head>
+
+    <!-- Webpage Body -->
+    <body>
+        <!-- Top Navigation Bar -->
+        <section class="header">
+            <h1> Courtney Sacco  </h1>
+            <nav>
+                <ul>
+                    <li>
+                        <a href="#About-Me">About Me</a>
+                    </li>
+                    <li>
+                        <a href="#My-Work">My Work</a>
+                    </li>
+                    <li>
+                        <a href="#Contact-Me">Contact Me</a>
+                    </li>
+                    
+                </ul>
+            </nav>
+        </section>
