created an about me section

--- a/index.html
+++ b/index.html
@@ -28,3 +28,16 @@
                 </ul>
             </nav>
         </section>
+
+        <!-- Selection "About Me" -->
+
+        <article id="About-Me" class="Grid">
+
+            <header class="header-title"><h2>About <br/> Me</h2></header>
+
+            <summary class="About-Me-Desc">My name is Courtney, I am 24 years old and live in New Jersey!
+                    I have been working a receptionist job at the European Wax Center 
+                    for 4 years now and I am ready for change, which is why I decided to take a 
+                    coding course.  In my spare time, I love to read or go out with friends. 
+            </summary>
+        </article>
