added my work section and Horiseon project

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             </nav>
         </section>
 
-        <!-- Selection "About Me" -->
+        <!-- Section "About Me" -->
 
         <article id="About-Me" class="Grid">
 
@@ -41,3 +41,17 @@
                     coding course.  In my spare time, I love to read or go out with friends. 
             </summary>
         </article>
+
+
+        <!-- Section " My Work " -->
+        <article id="My-Work" class="Grid">
+
+            <header class="header-title"><h2>My <br/> Work</h2></header>
+            <ul class="projects-grid">
+                <li class="proj1">
+                    <a class="portfolio-links" href="https://courtneysacco.github.io/my-horiseon/" target="_blank"></a>
+                        <summary class="proj-title">
+                            <h5>Horiseon</h5>
+                            <p>HTML</p>
+                        </summary>
+                </li>
