added placeholders for future projects

--- a/index.html
+++ b/index.html
@@ -55,3 +55,30 @@
                             <p>HTML</p>
                         </summary>
                 </li>
+                <!-- Placeholder for Future Project -->
+                <li class="proj2">
+                    <summary class="proj-title">
+                        <h5>Placeholder</h5>
+                        <p>Placeholder</p>
+                    </summary>
+                </li>
+                <li class="proj3">
+                    <summary class="proj-title">
+                        <h5>Placeholder</h5>
+                        <p>Placeholder</p>
+                    </summary>
+                </li>
+                <li class="proj4">
+                    <summary class="proj-title">
+                        <h5>Placeholder</h5>
+                        <p>Placeholder</p>
+                    </summary>
+                </li>
+                <li class="proj5">
+                    <summary class="proj-title">
+                        <h5>Placeholder</h5>
+                        <p>Placeholder</p>
+                    </summary>
+                </li>
+            </ul>    
+          </article>
