added a contact section

--- a/index.html
+++ b/index.html
@@ -82,3 +82,14 @@
                 </li>
             </ul>    
           </article>
+
+          <!-- Section "Contact Me" -->
+          <section id="Contact-Me" class="Contact-Me">
+            <header class="header-title"> <h2>Contact <br/> Me</h2></header>
+            <li class="contact-item">555.555.5555</li>
+            <li class="contact-item"> <a id="contact-link" href="emailto:x0c0urtney14xo@aim.com" tarfet="_blank" >Email</a></li>
+            <li class="contact-item"> <a id="contact-link" href="https://github.com/courtneysacco" target="_blank" >Github</a></li>
+          </section>
+</body>
+
+</html>
