--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <!-- Head -->
     <head>
         <meta charset="UTF-8" />
-        <link rel="stylesheet" href=".assets/css/style.css">
+        <link rel="stylesheet" href="./assets/css/style.css">
         <title>Courtney's Portfolio</title>
         <meta name="viewport" content="width=device=width, initial-scale.1.0">
     </head>
